# piccy

./: .release-please-config.json  .release-please-manifest.json  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: renovate.json
.github/workflows/: build-app.yml  build-npm-lib.yaml  build-tauri-app.yaml  release.yml
piccy_app/: CHANGELOG.md  Cargo.toml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tauri.conf.json
piccy_app/capabilities/: default.json
piccy_app/icons/: icon.icns
piccy_app/src/: command.rs  error.rs  lib.rs  main.rs
piccy_app/web/: .oxlintrc.json  LICENSE  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  prettier.config.ts  tailwind.config.js  vite.config.ts
piccy_app/web/src/: app.tsx  index.tsx
piccy_app/web/src/components/: TitleBar.tsx  file.tsx  image.tsx  menu.tsx
piccy_app/web/src/components/image/: Modal.tsx  crop.tsx  filter.tsx  flip.tsx  index.ts  info.tsx  resize.tsx  rotate.tsx
piccy_app/web/src/components/ui/: color-mode.tsx  provider.tsx  toaster.tsx  tooltip.tsx
piccy_app/web/src/hooks/: useFileUpload.ts  useMultiImageState.ts
piccy_app/web/src/store/: image.ts
piccy_app/web/src/styles/: global.css  index.scss
piccy_app/web/src/utils/: file.ts  image.ts
piccy_core/: CHANGELOG.md  Cargo.toml
piccy_core/src/: common.rs  error.rs  gif.rs  image.rs  lib.rs  types.rs
piccy_node/: CHANGELOG.md  Cargo.toml  package.json  pnpm-lock.yaml
piccy_node/src/: common.rs  error.rs  image.rs  lib.rs  types.rs
piccy_node/src/types/: image.rs
