[workspace]
members = [
    "piccy_app"
, "piccy_core", "piccy_node"]
resolver = "2"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "LGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/puniyu-plugins/piccy"
repository = "https://github.com/puniyu-plugins/piccy"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2"

[profile.dev]
incremental = true

