[package]
name = "piccy_app"
version = "0.2.4"
authors.workspace = true
edition.workspace = true


[lib]
name = "piccy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
piccy_core = { path = "../piccy_core" }

thiserror.workspace = true
anyhow = "1.0.100"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
