[package]
name = "piccy_app"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "piccy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-opener = "2"
piccy_core = { path = "../piccy_core" }

thiserror.workspace = true
anyhow = "1.0.100"
tauri-plugin-fs = "2"
