[package]
name = "piccy_app"
version = "0.5.2"
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "piccy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "rustls-tls"] }
tauri-plugin-opener = "2"
piccy_core = { path = "../piccy_core" }
window-vibrancy = "0.7.1"

thiserror.workspace = true
anyhow = "1.0.100"
tauri-plugin-fs = "2"
