[package]
name = "piccy_core"
version = "0.2.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
image = { version = "0.25.8" }
base64 = "0.22.1"

serde.workspace = true
thiserror.workspace = true