[package]
name = "piccy_core"
version = "0.4.3"
description = "a image toool"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base64 = { version = "0.22.1" }
rayon = { version = "1.11.0" }
bytes = { version = "1.11.1" }

image.workspace = true
serde.workspace = true
thiserror.workspace = true


imageproc = { version = "0.26.0", features = ["rayon"] }

