[package]
name = "piccy_node"
version = "0.5.0"
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = [] }
napi-derive = "3.0.0"

serde.workspace = true
image.workspace = true

piccy_core = { version = "0.5.0", path = "../piccy_core" }


[build-dependencies]
napi-build = "2"